# vector-similarity

./: movies.yaml  pyproject.toml  vectors.py
