[build-system]
requires      = ["setuptools>=61.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-similarity"
version = "0.0.1"
description = "easily calculate vector similarity between text data"
readme = "README.md"
authors = [{ name = "Edward Yang", email = "edwardpyang@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

keywords = ["nlp", "similarity"]

dependencies = [
        "numpy >= 1.24.0",
        "polars >= 0.15.16",
        "pandas >= 1.5.2",
        "torch >= 1.13.1",
        "orjson >= 3.8.5",
        "attrs >= 22.2.0",
        "scikit-learn",
        "gensim",
        "structlog",
        "psutil",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
